<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="5dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_on"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:text="@string/txt_on"/>
        <Button
            android:id="@+id/btn_off"
            android:layout_width="100dp"
            android:layout_marginStart="20dp"
            android:layout_height="50dp"
            android:text="@string/txt_off"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="5dp"
        android:paddingBottom="5dp">
        <ImageView
            android:id="@+id/iv_rabbit"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/tho"
            tools:ignore="ContentDescription"/>
        <TextView
            android:id="@+id/tv_rabbit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_radius"
            android:fontFamily="sans-serif-light"
            android:paddingHorizontal="20dp"
            android:text="@string/txt_rabbit"
            android:textColor="@color/white"
            android:textSize="24sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="5dp"
        android:paddingBottom="5dp">
        <ImageView
            android:id="@+id/iv_cat"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cat"
            tools:ignore="ContentDescription"/>
        <TextView
            android:id="@+id/tv_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_radius"
            android:fontFamily="sans-serif-light"
            android:paddingHorizontal="20dp"
            android:text="@string/txt_cat"
            android:textColor="@color/white"
            android:textSize="24sp"/>

    </FrameLayout>



</LinearLayout>



